Bug 482716 - Startup sound does not play
Summary: Startup sound does not play
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Startup process (other bugs)
Version First Reported In: 6.0.1
Platform: Arch Linux Linux
: NOR normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords: qt6
: 483255 (view as bug list)
Depends on:
Blocks:
 
Reported: 2024-03-07 13:49 UTC by worthymelight
Modified: 2024-07-20 19:08 UTC (History)
11 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.0.3
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description worthymelight 2024-03-07 13:49:37 UTC
Linux/KDE Plasma: Arch
KDE Plasma Version: 6.0.1
KDE Frameworks Version: 6.0.0
Qt Version: 6.6.2
Comment 1 Nate Graham 2024-03-07 21:30:23 UTC
Can reproduce.
Comment 2 Kevin R 2024-03-11 16:06:45 UTC
*** Bug 483255 has been marked as a duplicate of this bug. ***
Comment 3 Bug Janitor Service 2024-03-14 00:10:02 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/4067
Comment 4 Harald Sitter 2024-03-14 01:27:32 UTC
Ugh, this is actually terrible. Besides the obvious bug with us not resolving the sounds correctly, the sound device may also be in energy saving and not wake up at all or not in time to produce anything audible 🙈
Comment 5 Nicolas Fella 2024-03-15 10:49:20 UTC
Git commit 1d36279bceb2135725db0130714b8980b68c50b3 by Nicolas Fella, on behalf of Harald Sitter.
Committed on 15/03/2024 at 10:31.
Pushed by nicolasfella into branch 'master'.

resolve startup sound against ocean theme

this is a fairly dirty hotfix for 6.0. longer term we should look at
porting from phonon to libcanberra so we don't need to faff about with
file name resolution

M  +18   -10   startkde/startplasma.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/1d36279bceb2135725db0130714b8980b68c50b3
Comment 6 Nicolas Fella 2024-03-15 10:50:04 UTC
Git commit 3ff5540efc259c9d428841d4038a54f2bf76df11 by Nicolas Fella, on behalf of Harald Sitter.
Committed on 15/03/2024 at 10:49.
Pushed by nicolasfella into branch 'Plasma/6.0'.

resolve startup sound against ocean theme

this is a fairly dirty hotfix for 6.0. longer term we should look at
porting from phonon to libcanberra so we don't need to faff about with
file name resolution
(cherry picked from commit 1d36279bceb2135725db0130714b8980b68c50b3)

M  +18   -10   startkde/startplasma.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/3ff5540efc259c9d428841d4038a54f2bf76df11
Comment 7 Julien Delquié 2024-03-30 08:31:28 UTC
I have installed 6.0.3, and still no sound on login.
Comment 8 Julien Delquié 2024-04-01 07:20:29 UTC
(In reply to Julien Delquié from comment #7)
> I have installed 6.0.3, and still no sound on login.

Ok, nevermind, I think I have messed-up my USE flags on day, and maybe missing media-libs/phonon-vlc dependency.
Actually, it works.
Comment 9 Elite 2024-07-18 02:58:57 UTC
Having this same issue in 6.1.2  .3 hasn't hit arch yet. but Kde mutes audio after about 3 seconds. I am using Freedesktop cause I prefer the volume up down sound on that one. an got a bit tired of replacing the ocean one every update. 

Operating System: Garuda Linux 
KDE Plasma Version: 6.1.2
KDE Frameworks Version: 6.4.0
Qt Version: 6.7.2
Kernel Version: 6.10.0-1-cachyos (64-bit)
Graphics Platform: Wayland
Processors: 16 × AMD Ryzen 7 3700X 8-Core Processor
Memory: 15.5 GiB of RAM
Graphics Processor: AMD Radeon RX 7900 GRE
Comment 10 Elite 2024-07-20 19:08:34 UTC
(In reply to Elite from comment #9)
> Having this same issue in 6.1.2  .3 hasn't hit arch yet. but Kde mutes audio
> after about 3 seconds. I am using Freedesktop cause I prefer the volume up
> down sound on that one. an got a bit tired of replacing the ocean one every
> update. 
> 
> Operating System: Garuda Linux 
> KDE Plasma Version: 6.1.2
> KDE Frameworks Version: 6.4.0
> Qt Version: 6.7.2
> Kernel Version: 6.10.0-1-cachyos (64-bit)
> Graphics Platform: Wayland
> Processors: 16 × AMD Ryzen 7 3700X 8-Core Processor
> Memory: 15.5 GiB of RAM
> Graphics Processor: AMD Radeon RX 7900 GRE

~update 7/20/2024 Fixed in 6.1.3