resolve startup sound against ocean theme

this is a fairly dirty hotfix for 6.0. longer term we should look at
porting from phonon to libcanberra so we don't need to faff about with
file name resolution

BUG: 482716
(cherry picked from commit 1d36279bceb2135725db0130714b8980b68c50b3)